<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reminders</string>
    <string name="no_reminders">No reminders yet.\nTap + to add one.</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="reminder_name">Reminder name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="time">Time</string>
    <string name="days">Days</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="reminder_channel_name">Reminders</string>
    <string name="reminder_channel_desc">Reminder notifications</string>
</resources>
